--- a/index.html
+++ b/index.html
@@ -4,67 +4,159 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Encuentro Rugby Veteranos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    label { display:block; margin-top: 10px; }
-    input, select, button { width: 100%; padding: 8px; margin-top: 5px; }
-    .total { font-size: 18px; font-weight: bold; margin-top: 15px; }
+    body {
+      margin: 0;
+      font-family: 'Oswald', sans-serif;
+      background-color: #F5F6F2;
+      color: #0A702A;
+    }
+
+    header {
+      text-align: center;
+      background-color: #0A702A;
+      color: #F5F6F2;
+      padding: 10px 0;
+    }
+
+    .portada {
+      width: 100%;
+      max-width: 1080px;
+      margin: 0 auto;
+    }
+
+    .portada img {
+      width: 100%;
+      height: auto;
+      border-bottom: 5px solid #0A702A;
+    }
+
+    .form-container {
+      max-width: 600px;
+      background: white;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: #0A702A;
+    }
+
+    label {
+      display: block;
+      margin-top: 12px;
+      font-weight: 600;
+      color: #0A702A;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border: 2px solid #0A702A;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #0A702A;
+      color: #F5F6F2;
+      font-size: 1.1rem;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      margin-top: 20px;
+      cursor: pointer;
+      transition: background 0.2s ease-in-out;
+    }
+
+    button:hover {
+      background-color: #084d1f;
+    }
+
+    .total {
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 15px;
+      color: #0A702A;
+      text-align: right;
+    }
   </style>
 </head>
 <body>
-  <h2>Formulario de Inscripción</h2>
-  <form id="rugbyForm">
-    <label>Club/Agrupación</label>
-    <select name="club" required>
-      <option value="">-- Seleccionar --</option>
-      <option>Club 1</option>
-      <option>Club 2</option>
-      <option>Club 3</option>
-      <option>Club 4</option>
-      <option>Club 5</option>
-      <option>Club 6</option>
-    </select>
+  <header>
+    <h1>Encuentro de Rugby Veteranos</h1>
+  </header>
 
-    <label>Nombre</label>
-    <input type="text" name="nombre" required>
+  <!-- Portada -->
+  <div class="portada">
+    <img src="portada.jpg" alt="Encuentro Rugby Veteranos">
+  </div>
 
-    <label>Apellido</label>
-    <input type="text" name="apellido" required>
+  <!-- Formulario -->
+  <div class="form-container">
+    <h2>Formulario de Inscripción</h2>
+    <form id="rugbyForm">
+      <label>Club/Agrupación</label>
+      <select name="club" required>
+        <option value="">-- Seleccionar --</option>
+        <option>Club 1</option>
+        <option>Club 2</option>
+        <option>Club 3</option>
+        <option>Club 4</option>
+        <option>Club 5</option>
+        <option>Club 6</option>
+      </select>
 
-    <label>Fecha de nacimiento</label>
-    <input type="date" name="fechaNacimiento" required onchange="calcEdad(this.value)">
+      <label>Nombre</label>
+      <input type="text" name="nombre" required>
 
-    <label>Edad</label>
-    <input type="number" name="edad" id="edad" readonly>
+      <label>Apellido</label>
+      <input type="text" name="apellido" required>
 
-    <label>CUIL/CUIT</label>
-    <input type="text" name="cuil" required>
+      <label>Fecha de nacimiento</label>
+      <input type="date" name="fechaNacimiento" required onchange="calcEdad(this.value)">
 
-    <label>¿Tiene obra social?</label>
-    <select name="obraSocial" id="obraSocial" onchange="toggleObraSocial()">
-      <option value="No">No</option>
-      <option value="Sí">Sí</option>
-    </select>
+      <label>Edad</label>
+      <input type="number" name="edad" id="edad" readonly>
 
-    <label id="cualLabel" style="display:none;">¿Cuál?</label>
-    <input type="text" name="cualObra" id="cualObra" style="display:none;">
+      <label>CUIL/CUIT</label>
+      <input type="text" name="cuil" required>
 
-    <label>Opción de participación</label>
-    <select name="tipoEntrada" id="tipoEntrada" onchange="calcTotal()">
-      <option value="30000">Jugador - $30.000</option>
-      <option value="24000">Solo comida - $24.000</option>
-    </select>
+      <label>¿Tiene obra social?</label>
+      <select name="obraSocial" id="obraSocial" onchange="toggleObraSocial()">
+        <option value="No">No</option>
+        <option value="Sí">Sí</option>
+      </select>
 
-    <label>Invitados (solo comida, $24.000 c/u)</label>
-    <input type="number" name="invitados" id="invitados" value="0" min="0" onchange="calcTotal()">
+      <label id="cualLabel" style="display:none;">¿Cuál?</label>
+      <input type="text" name="cualObra" id="cualObra" style="display:none;">
 
-    <div class="total">Total a abonar: $<span id="total">0</span></div>
+      <label>Opción de participación</label>
+      <select name="tipoEntrada" id="tipoEntrada" onchange="calcTotal()">
+        <option value="30000">Jugador - $30.000</option>
+        <option value="24000">Solo comida - $24.000</option>
+      </select>
 
-    <button type="submit">Enviar</button>
-  </form>
+      <label>Invitados (solo comida, $24.000 c/u)</label>
+      <input type="number" name="invitados" id="invitados" value="0" min="0" onchange="calcTotal()">
+
+      <div class="total">Total a abonar: $<span id="total">0</span></div>
+
+      <button type="submit">Enviar inscripción</button>
+    </form>
+  </div>
 
   <script>
-    // Usamos el proxy de Netlify
     const endpoint = "/.netlify/functions/proxy";
 
     function calcEdad(fecha) {
