--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <!-- Portada -->
   <div class="portada">
-    <img src="portada.jpg" alt="Encuentro Rugby Veteranos">
+    <img src="https://i.ibb.co/cKKw9dpV/portada-web-legends.png" alt="Encuentro Rugby Veteranos">
   </div>
 
   <!-- Formulario -->
