--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
 
     input, select {
-      width: 100%;
+      width: 90%;
       padding: 10px 12px;
       margin-top: 6px;
       border: 2px solid #084D1F;
@@ -162,16 +162,16 @@
       <label id="cualLabel" style="display:none;">¿Cuál?</label>
       <input type="text" name="cualObra" id="cualObra" style="display:none;">
 
-      <label>Opción de participación</label>
+      <label>Seleccioná una Opción</label>
       <select name="tipoEntrada" id="tipoEntrada" onchange="calcTotal()">
         <option value="30000">Jugador - $30.000</option>
-        <option value="24000">Solo comida - $24.000</option>
+        <option value="24000">Solo 3er tiempo - $24.000</option>
       </select>
 
-      <label>Invitados (solo comida, $24.000 c/u)</label>
+      <label>Llevas Invitados? (solo 3er tiempo, $24.000 c/u)</label>
       <input type="number" name="invitados" id="invitados" value="0" min="0" onchange="calcTotal()">
 
-      <div class="total">Total a abonar: $<span id="total">0</span></div>
+      <div class="total">Calcular total a abonar: $<span id="total">0</span></div>
 
       <button type="submit">Enviar inscripción</button>
     </form>
@@ -284,7 +284,7 @@
 
       let result = await resp.json();
       if (result.result === "OK") {
-        alert("Formulario enviado con éxito!");
+        alert("Inscripción enviada con éxito!");
         form.reset();
         document.getElementById("total").innerText = 0;
       } else {
