--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
       <label>Club/Agrupación</label>
       <select name="club" required>
         <option value="">-- Seleccionar --</option>
-        <option>Club 1</option>
-        <option>Club 2</option>
-        <option>Club 3</option>
-        <option>Club 4</option>
-        <option>Club 5</option>
-        <option>Club 6</option>
+        <option>Charoga (Santa Fe)</option>
+        <option>Querandí (Santa Fe)</option>
+        <option>Vizcachones (Concordia)</option>
+        <option>Jovatos (Rosario)</option>
+        <option>Albatros (Paraná)</option>
+        <option>Tilcara Legends (Paraná)</option>
       </select>
 
       <label>Nombre</label>
