--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <option value="24000">Solo 3er tiempo - $24.000</option>
       </select>
 
-      <label>Llevas Invitados? (solo 3er tiempo, $24.000 c/u)</label>
+      <label>Llevas Invitados? (Familires, amigos), etc..(sólo 3er tiempo, $24.000 c/u)</label>
       <input type="number" name="invitados" id="invitados" value="0" min="0" onchange="calcTotal()">
 
       <div class="total">Calcular total a abonar: $<span id="total">0</span></div>
