--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 <body>
  <!-- LOADER -->
   <div id="loader">
-    <img src="https://i.ibb.co/GfJfM48J/Tilcara-logo-con-sombra.png" alt="Escudo del Club">
-    <p>Cargando...</p>
+    <img src="https://i.ibb.co/bj3jvMC3/Tilcara-logo-con-sombra.png" alt="Escudo del Club">
+    <p>Ya casi...</p>
   </div>
   <!-- Portada -->
   <div class="portada">
