--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <!-- Modal de éxito -->
 <div id="successModal" class="modal hidden">
   <div class="modal-content">
-    <img src="escudo.png" alt="Escudo Club">
+    <img src="https://i.ibb.co/GfJfM48J/Tilcara-logo-con-sombra.png" alt="Escudo Club">
     <h3>¡Inscripción enviada con éxito!</h3>
     <p>Gracias por participar.</p>
     <button onclick="closeModal()">Aceptar</button>
