--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@ function closeModal() {
   document.getElementById("successModal").classList.add("hidden");
 }
 
-   
+// Calcular total inicial al cargar la página
+window.addEventListener("DOMContentLoaded", () => {
+  calcTotal();
+});   
    
   </script>
 </body>
