--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Encuentro Rugby Veteranos</title>
+ 
+
+<!-- Título y descripción -->
+<title>Tilcara Legends | Formulario Jugadores</title>
+<meta name="description" content="Formulario de inscripción para el encuentro de rugby de veteranos. Confirma tu asistencia.">
+
+<!-- Icono para pestañas / navegador -->
+<link rel="icon" type="image/png" href="https://i.ibb.co/nN8LPTjD/logo-verde.png" />
+
+<!-- Color de la barra del navegador (Chrome / Edge móvil) -->
+<meta name="theme-color" content="#084D1F">
+
+<!-- Open Graph (WhatsApp / Facebook / LinkedIn) -->
+<meta property="og:title" content="Tilcara Legends | Formulario Jugadores">
+<meta property="og:description" content="Formulario de inscripción para el encuentro de rugby de veteranos. Confirma tu asistencia.">
+<meta property="og:image" content="https://i.ibb.co/nN8LPTjD/logo-verde.png">
+<meta property="og:url" content="https://tilcaralegends.netlify.app/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tilcara Legends | Formulario Jugadores">
+<meta name="twitter:description" content="Formulario de inscripción para el encuentro de rugby de veteranos. Confirma tu asistencia.">
+<meta name="twitter:image" content="https://tilcaralegends.netlify.app/">
+
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
