--- a/index.html
+++ b/index.html
@@ -296,8 +296,9 @@
       <label>Edad</label>
       <input type="number" name="edad" id="edad" readonly>
 
-      <label>CUIL/CUIT</label>
-      <input type="text" name="cuil" required>
+     <label>CUIL/CUIT</label>
+     <input type="text" name="cuil" id="cuil" maxlength="11" pattern="\d{11}" required placeholder="Ej: 20281234565">
+
 
       <label>¿Tiene obra social?</label>
       <select name="obraSocial" id="obraSocial" onchange="toggleObraSocial()">
@@ -383,6 +384,9 @@
       }
     }
 
+  
+
+
     // === FUNCIONES DE CÁLCULO ===
     function calcEdad(fecha) {
       if (!fecha) return;
@@ -409,19 +413,34 @@
       document.getElementById("total").innerText = total;
       return total;
     }
+const cuilInput = document.getElementById("cuil");
+
+// Filtrar solo números al escribir
+cuilInput.addEventListener("input", (e) => {
+  e.target.value = e.target.value.replace(/\D/g, "");
+});
+
 // === ENVÍO ===
 document.getElementById("rugbyForm").addEventListener("submit", async (e) => {
   e.preventDefault();
   loader.classList.remove("hidden"); // mostrar loader mientras se envía
 
   let form = e.target;
+
+  // Validar CUIL/CUIT antes de enviar
+  if (cuilInput.value.length !== 11) {
+    loader.classList.add("hidden");
+    alert("El CUIL/CUIT debe tener exactamente 11 números.");
+    return;
+  }
+
   let data = {
     club: form.club.value,
     nombre: form.nombre.value,
     apellido: form.apellido.value,
     fechaNacimiento: form.fechaNacimiento.value,
     edad: form.edad.value,
-    cuil: form.cuil.value,
+    cuil: cuilInput.value,
     obraSocial: form.obraSocial.value,
     cualObra: form.cualObra.value,
     tipoEntrada: form.tipoEntrada.value == "30000" ? "Jugador" : "Solo comida",
@@ -461,7 +480,7 @@ function closeModal() {
 // Calcular total inicial al cargar la página
 window.addEventListener("DOMContentLoaded", () => {
   calcTotal();
-});   
+});
    
   </script>
 </body>
