--- a/index.html
+++ b/index.html
@@ -264,7 +264,12 @@
   <div class="portada">
     <img src="https://i.ibb.co/cKKw9dpV/portada-web-legends.png" alt="Encuentro Rugby Veteranos">
   </div>
-
+<!-- Botón visible para todos -->
+  <div style="text-align:center; margin:15px 0;">
+    <button onclick="window.location.href='https://adminlegends.netlify.app/'">
+      Ver Jugadores Inscriptos
+    </button>
+  </div>
   <!-- Formulario -->
   <div class="form-container">
     <h2>Formulario de Inscripción</h2>
