--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   </div>
 <!-- Botón visible para todos -->
   <div style="text-align:center; margin:15px 0;">
-    <button onclick="window.location.href='https://adminlegends.netlify.app/'">
+    <button onclick="window.location.href='https://administradorlegends.netlify.app'">
       Ver Jugadores Inscriptos
     </button>
   </div>
