--- a/index.html
+++ b/index.html
@@ -327,6 +327,11 @@
 
       <button type="submit">Enviar inscripción</button>
     </form>
+    <a href="https://wa.me/543435020970?text=Hola,%20tengo%20dudas%20con%20el%20formulario%20Legends" target="_blank" 
+   style="display:inline-block; padding:10px 20px; background:#25D366; color:white; border-radius:6px; text-decoration:none; font-weight:bold;">
+   ¿Dudas? Chateá por WhatsApp
+</a>
+
   </div>
 
   <script>
