--- a/index.html
+++ b/index.html
@@ -327,13 +327,17 @@
 
       <button type="submit">Enviar inscripción</button>
     </form>
-    <a href="https://wa.me/543435020970?text=Hola,%20tengo%20dudas%20con%20el%20formulario%20Legends" target="_blank" 
-   style="display:inline-block; padding:10px 20px; background:#25D366; color:white; border-radius:6px; text-decoration:none; font-weight:bold;">
+  
+
+  </div>
+<a href="https://wa.me/543435020970?text=Hola,%20tengo%20dudas%20con%20el%20formulario%20Legends" target="_blank" 
+   style="display:texto-align:center; inline-block; padding:10px 20px; background:#084D1F; color:white; border-radius:0px; text-decoration:none; font-weight:bold;">
    ¿Dudas? Chateá por WhatsApp
 </a>
 
-  </div>
+      
 
+  
   <script>
     const endpoint = "/.netlify/functions/proxy";
     const loader = document.getElementById("loader");
