--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
         <option>Jovatos (Rosario)</option>
         <option>Albatros (Paraná)</option>
         <option>Tilcara Legends (Paraná)</option>
+        <option>Capibá Señor (Paraná)</option>
       </select>
 
       <label>Nombre</label>
