--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       Ver Jugadores Inscriptos
     </button>
   </div>
-  <!-- Formulario -->
+  <!-- Formulario 
   <div class="form-container">
     <h2>Formulario de Inscripción</h2>
     <form id="rugbyForm">
@@ -330,7 +330,7 @@
     </form>
   
 
-  </div>
+  </div>-->
 <a href="https://wa.me/543435020970?text=Hola,%20tengo%20dudas%20con%20el%20formulario%20Legends" target="_blank" 
    style="display:texto-align:center; inline-block; padding:10px 20px; background:#084D1F; color:white; border-radius:0px; text-decoration:none; font-weight:bold;">
    ¿Dudas? Chateá por WhatsApp
