--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <button onclick="window.location.href='https://administradorlegends.netlify.app'">
       Ver Jugadores Inscriptos
     </button>
+     <h2>Inscripciones Cerradas</h2>
   </div>
   <!-- Formulario 
   <div class="form-container">
